--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.log
 *.pyc
 *.swp
+*.txt
 .DS_Store
 .atom/
 .buildlog/
@@ -27,6 +28,7 @@ assets/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+
 .packages
 .pub-cache/
 .pub/
