--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
   otp_text_field:
   carousel_pro:
   carousel_slider:
-   
+  google_nav_bar: 
+  flutter_staggered_grid_view: 
+  awesome_drawer_bar: 
 
 dev_dependencies:
   flutter_test:
