--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dealsapp">
+    package="com.algoxfusion.dealsapp">
    <application
-        android:label="dealsapp"
+        android:label="AlgoxFusion Deals"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
