--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,14 @@ dependencies:
   flutter_local_notifications: 
   http: 0.13.4
   shimmer: ^2.0.0
+  # firebase_auth: 3.3.0
+  # firebase_storage: 10.2.4
+  fluttertoast: 
+  date_format: 2.0.5
+
+# dependency_overrides: 
+#   firebase_auth_platform_interface: 6.2.0
+#   firebase_database_platform_interface: 0.2.1+2
 
 
 
